@@ -1,6 +1,9 @@
 <pre>
 date:
 	* version 0.4
+	* gh goes home :) gH in a new tab
+	* :open! bypasses cache
+	* :buffer and :buffers support (patch from Lars Kindler)
 	* added :edit, :e and :tabedit aliases for :open, :tabopen
 	* settings can now be changed with += and -= like in vim (patch from Виктор Кожухаров)
 	* Support for space/shift-space/alt-left/alt-right keys without beeping
